fix z-indexing bug on responsive position A ad [fixes #75455522]

--- a/app/assets/stylesheets/new/masthead.css.scss
+++ b/app/assets/stylesheets/new/masthead.css.scss
@@ -465,7 +465,7 @@
 
 .interior .masthead {
     padding-bottom: 0;
-    background: white;
+    background: none;
     .inner {
         padding: 14px 0 82px;
         @media screen and (max-width: 975px)                { padding-bottom: 110px; }
