--- a/app/assets/stylesheets/new/single.css.scss
+++ b/app/assets/stylesheets/new/single.css.scss
@@ -1103,7 +1103,7 @@ body.single .comments {
                         margin-left:-150px;
                         top:150px;
                         width:300px;
-                        z-index:100;
+                        z-index:1;
                     }
                 }
 
